# ollama-model-resolver

./: .gitignore  BRIEF.md  Cargo.toml  FLOX.md  PATCH_NOTES.md  README.md  flake.nix
.flox/: env.json
.flox/env/: manifest.toml
.flox/pkgs/ollama-model-resolver/: default.nix
docs/: unified-memory.md
src/: app.rs  cli.rs  display.rs  error.rs  hardware.rs  lib.rs  local.rs  main.rs  parallel.rs  registry.rs  resolver.rs  sanitize.rs  types.rs
tests/: wrapper_smoke.sh
