[package]
name = "ollama-model-resolver"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Resolve the best Ollama model variant for the local hardware profile"
license = "MIT"

[dependencies]
bytesize = "2"
clap = { version = "4", features = ["derive"] }
colored = "3"
comfy-table = "7"
dialoguer = "0.11"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
